--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,10 @@ body {
 
 .container {
     text-align: center;
-    background-color: #ffffff;
+    background-color: #1a1818;
     padding: 2rem;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(43, 9, 237, 0.1);
     width: 100%;
     max-width: 400px;
 }
