--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
 
 .container {
     text-align: center;
+    margin-top: 50px;
     background-color: #1a1818;
     padding: 2rem;
     border-radius: 10px;
@@ -25,14 +26,15 @@ body {
 }
 
 .main-logo {
-    width: 200px;
+    width: 100%;
+    max-width: 600px;
     height: auto;
     margin-bottom: 1rem;
 }
 
 .token-logo {
     width: 40px;
-    height: auto;
+    height: 40px;
     vertical-align: middle;
     margin-right: 0.5rem;
 }
@@ -46,8 +48,8 @@ h1 {
     background-color: #007bff;
     color: #fff;
     border: none;
-    padding: 0.75rem 1.5rem;
-    font-size: 1rem;
+    padding: 10px 20px;
+    font-size: 16px;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -55,12 +57,14 @@ h1 {
 }
 
 .btn:hover {
-    background-color: #0056b3;
+    background-color: #e041c6;
 }
 
 .info {
     margin-top: 0.5rem;
     color: #555;
+    display: inline-block;
+    margin: 10px 0;
 }
 
 .info span {
