--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,8 @@ body {
     width: 40px;
     height: 40px;
     vertical-align: middle;
-    margin-right: 0.5rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 h1 {
